--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for idx in list(range)\n",
+    "    for idx in list(range(0, len()))\n",
     "    return list"
    ]
   },
