--- a/index.ipynb
+++ b/index.ipynb
@@ -223,6 +223,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    result = \n",
     "    for idx in list(range(0, len(travel_destinations)))\n",
     "    return list"
    ]
