--- a/index.ipynb
+++ b/index.ipynb
@@ -223,8 +223,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    result = \n",
-    "    for idx in list(range(0, len(travel_destinations)))\n",
+    "    result = []\n",
+    "    for idx in list(range(0, len(travel_destinations))):\n",
+    "        \n",
     "    return list"
    ]
   },
