Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    result = []\n",
     "    for idx in list(range(0, len(travel_destinations))):\n",
-    "        result.append(travel_destinations[])\n",
+    "        result.append(travel_destinations[idx].ti)\n",
     "    return list"
    ]
   },
