--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     "    result = []\n",
     "    for idx in list(range(0, len(travel_destinations))):\n",
     "        result.append(travel_destinations[idx].title())\n",
-    "    return list"
+    "    return result"
    ]
   },
   {
